--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "homepage": "https://jgr3go.github.io/artc",
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
